--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
-    <string name="app_name">TestTabs</string>
+    <string name="app_name">SpeedTest 5G</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_one_fragment">Ping</string>
-    <string name="hello_two_fragment">Download</string>
-    <string name="hello_three_fragment">Upload</string>
-    <string name="hello_four_fragment">Web</string>
-    <string name="hello_five_fragment">Video</string>
+    <string name="ping_fragment">Ping</string>
+    <string name="download_fragment">Download</string>
+    <string name="upload_fragment">Upload</string>
+    <string name="web_fragment">Web</string>
+    <string name="video_fragment">Video</string>
     <string name="Start">Start Tests</string>
-    <string name="go_to_results">Go to Results</string>
+    <string name="Result">Go To Results</string>
+    <string name="Rerun">Rerun Tests</string>
+
 
 </resources>
